--- a/server/.gitignore
+++ b/server/.gitignore
@@ -8,6 +8,6 @@ yarn-error.log*
 .DS_Store
 *.log
 
-IMPLEMENTATION_CHECKLIST.md
-EMAIL_SYSTEM_README.md
-PAYMENT_INTEGRATION_GUIDE.md
+# Ignore all .md files except README.md
+*.md
+!README.md
