--- a/server/.gitignore
+++ b/server/.gitignore
@@ -9,5 +9,16 @@ yarn-error.log*
 *.log
 
 # Ignore all .md files except README.md
-*.md
-!README.md
+AI_ASSISTANT_TESTING_GUIDE.md
+
+API_TO_USE.md
+
+ARCHITECTURE.md
+
+CLOUDINARY_FILE_UPLOAD_GUIDE.md
+
+EMAIL_SYSTEM_README.md
+
+IMPLEMENTATION_CHECKLIST.md
+
+PAYMENT_INTEGRATION_GUIDE.md
